--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "npm": "5.0.3"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "deploy": "git push heroku master"
   },
   "author": "",
   "license": "ISC",
